# 9router

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  README.md  config.toml  state.json
crates/aggregator/: Cargo.toml
crates/aggregator/src/: lib.rs  mock.rs  orchestrator.rs  provider.rs  types.rs
crates/backend/: Cargo.toml
crates/backend/src/: config.rs  logbuf.rs  main.rs  provider_openai.rs  state.rs
crates/frontend/: Cargo.toml  Trunk.toml  index.html
crates/frontend/src/: main.rs
legacy/open-sse/executors/: base.js
legacy/open-sse/translator/concerns/: paramSupport.js  thinkingUnified.js
legacy/src/app/(dashboard)/dashboard/providers/[id]/: page.js
legacy/src/app/api/models/: route.js
legacy/src/app/api/models/test/: route.js
legacy/src/app/api/providers/[id]/models/: route.js
legacy/src/sse/handlers/: chat.js
open-sse/handlers/: chatCore.js
open-sse/providers/: capabilities.js
open-sse/providers/registry/: claude.js  github.js
open-sse/translator/formats/: claude.js
src/app/(dashboard)/dashboard/providers/[id]/: AddCustomModelModal.js  ModelRow.js  page.js
src/app/api/models/test/: ping.js  route.js
src/app/api/providers/[id]/models/: route.js
src/shared/constants/: providers.js
src/shared/hooks/: useModelCaps.js
tests/translator/: thinking-unified.test.js
tests/unit/: opus48-providers.test.js
