[package]
name = "backend"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "9Router backend — Axum HTTP server hosting the agentic orchestrator"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
aggregator = { path = "../aggregator" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
futures.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
toml = "0.8"
async-stream = "0.3"
