[package]
name = "frontend"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "M Y C frontend — Leptos (CSR) dashboard for the aggregator"

[[bin]]
name = "frontend"
path = "src/main.rs"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
gloo-net = { version = "0.6", features = ["eventsource"] }
futures = "0.3"
serde.workspace = true
serde_json.workspace = true
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
